io7m-jpra-maven-plugin/src/test/projects/compile-failure/src/main/jpra/com/io7m/bad.jpr
(package-begin com.io7m.bad)
(nonsense)
(package-end)
